src/styles/main.css
@font-face {
    font-family: 'Helvetica';
    font-style: normal;
    font-weight: normal;
    src: local('Helvetica'), url('/Helvetica.woff') format('woff');
}

@font-face {
    font-family: 'Neue-Regrade';
    src: local('Neue-Regrade'), url('/Neue-Regrade-Bold.woff2') format('woff');
}

/* Variables */
:root {
    --primary-color: #F1F0EC;
    --primary-shade-color: #ffffff;
    --secondary-color: #546B54;
    --secondary-color-shade: rgba(84,107,84,75%);
    --secondary-color-shade-light: rgba(84,107,84,50%);
    --secondary-color-shade-dark: #3E4E3E;
    --action-color: #D75636;
  
    --spacing-small: 16px;
    --spacing-medium: 32px;
    --spacing-large: 48px;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: var(--primary-color);
    color: var(--secondary-color);
    font-family: "Helvetica", sans-serif;
}

img, image {
    width: 100%;
    height: auto;
}

/* Styling for fonts */
h1, h2, h3, h4, summary, p, a {
    margin-bottom: var(--spacing-small);
}

h1, h2, h3, h4, summary {
    font-weight: bold;
    text-transform: uppercase;
    font-family: 'Neue-Regrade', sans-serif;
}

h1 {
    font-size: 3rem;
    margin-bottom: var(--spacing-medium);
    text-align: center;
}

h2 {
    font-size: 1.5rem;
    text-align: center;
}

h3 {
    font-size: 1.25rem;
}

h4, summary {
    font-size: 1rem;
}

p {
    font-size: 1rem;
}

a {
    font-weight: 200;
    color: var(--secondary-color);
}

/* General classnames */
/* Gives all content within this class a max-width */
.content {
    max-width: 1200px;
    padding: var(--spacing-medium);
    margin: auto;

    & div {
        margin-bottom: calc(var(--spacing-large) * 2);
    }
}

/* Classnames for flex, grid and alignment */
.flex-col {
    display: flex;
    flex-direction: column;
}

.flex-row {
    display: flex;
    flex-direction: row;
}

.flex-center {
    align-self: center;
    justify-content: center;
}

.flex-space-between {
    justify-content: space-between;
}

.align-center {
    text-align: center;
}

.align-right {
    text-align: right;
}

/* Gap and spacing */
.gap-s {
    gap: var(--spacing-small);
}

.gap-m {
    gap: var(--spacing-medium);
}

.gap-l {
    gap: var(--spacing-large);
}

/* Margin button and top */
.mb-m {
    margin-bottom: var(--spacing-medium);
}

.mb-l {
    margin-bottom: var(--spacing-large);
}

.mt-m {
    margin-top: var(--spacing-medium);
}

.mt-l {
    margin-top: var(--spacing-large);
}

.womenArticles {
    display: flex;
    align-items: center;
    flex-direction: column;
    gap: 100px;
    margin-top: var(--spacing-large);
    
}

#womenSection {
    margin-top: var(--spacing-large);

}

